# conways-game-of-life

./: Cargo.toml
src/: main.rs  world.rs
