[package]
name = "conways-game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
pixels = "0.11.0"
rand = "0.8.5"
winit = "0.27.5"
winit_input_helper = "0.13.0"
